# eecs583project

./: CMakeLists.txt  README.md  cacheopt_log.c  calc_runtime.sh  output.txt  run.sh  run2.sh
benchmarks/: CMakeLists.txt  bad_hashtable.c  bad_linked_list.c  bad_matrix_walk.c  false_sharing.c  linked_list_random.c  mat_transpose.c  matmul2.c  matmul3.c  matmul_bad.c  matmul_bad_1k.c  matmul_bad_chain.c  matmul_bad_rect.c  random_access.c  stream_array.c  stride_killer.c  strided_access.c  transpose.c  trash_set.c
benchmarks/correctness/: README
benchmarks/hw1/: simple.c
benchmarks/performance/: README
hw2pass/: hw2pass.cpp
profiler/: CMakeLists.txt  CacheOptPass.cpp  CacheProfilerPass.cpp  ParseCachegrindPass.cpp
runtime/: trace_logger.c
